...
                    android:layout_weight="1"
                    android:text="@string/favoritos"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/texto_principal" />
                <Button
                    android:id="@+id/btnMas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mas" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llFavoritos"
...
